# fastapi-walletauth

./: README.md  pyproject.toml
fastapi_walletauth/: __init__.py  common.py  core.py  credentials.py  generate_keys.py  magic.py  manager.py  middleware.py  router.py  test_authorization.py  transaction.py  verification.py
src/fastapi_walletauth/: core.py  verification.py
tests/: test_integration.py  test_router.py  test_transaction_integration.py
